--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam Portfolio-Procoder09</title>
+    <title>Mohana Kandula Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -12,13 +12,12 @@
 
 
     <header>
-        <a href="" class="brand" data-aos="zoom-in" data-aos-duration="1000">Adam</a>
+        <a href="" class="brand" data-aos="zoom-in" data-aos-duration="1000">Mohana</a>
         <div class="menu-btn"></div>
         <div class="navigation">
             <a href="#main" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">Home</a>
             <a href="#about"data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">About</a>
             <a href="#skills" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">Skills</a>
-            <a href="#services" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Services</a>
             <a href="#work" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Work</a>
             <a href="#" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">Contact</a>
         </div>
@@ -26,7 +25,7 @@
 
     <section class="main" id="main">
         <div class="content">
-            <h2 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>Adam Smith</span></h2>
+            <h2 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>Mohana Varsha Sri</span></h2>
             <div class="animated-text" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
                 <h3>Web Developer</h3>
                 <h3>Web Designer</h3>
@@ -51,12 +50,12 @@
         <div class="content">
             <div class="column col-left reveal">
                 <div class="img-card" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="200">
-                    <img src="Image/img1.jpg" alt="">
+                    <img src="Image/mohana.jpg" alt="" height="100%" width="100%">
                 </div>
             </div>
             <div class="column col-right reveal">
-                <h2 class="content-title" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">Hey There! I am Adam Smith</h2>
-                <p class="paragraph-text" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2 class="content-title" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">Hey There! I am Mohana Varsha Sri</h2>
+                <p class="paragraph-text" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">I’m K. Mohana Varsha Sri, an enthusiastic and B.Tech Computer science and Engineering student at Rajiv Gandhi University of Knowledge and Technologies Ongole with a passion for building user-friendly web applications. As the developer of this dynamic To-Do List app, I handled everything from design to local storage logic. My biggest achievement was turning a simple task manager into an intuitive productivity tool with inline editing and category management! I'm motivated by the challenge of turning ideas into real, functional software. My skills include Java, Python, C, HTML, CSS, JavaScript, and the Spring Framework.</p>
                 <a href="#" class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="600">See more</a>
             </div>
         </div>
@@ -71,7 +70,7 @@
         <div class="content">
             <div class="column col-left">
                 <h2 class="content-title" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">My Skills and Experiences</h2>
-                <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300"></div>
                 <a href="#" class="btn" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="400">See more</a>
             </div>
             <div class="column col-right">
@@ -91,62 +90,24 @@
                 </div>
                 <div class="bar">
                     <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300">
-                        <span>Javascript</span>
-                        <span>80%</span>
+                        <span>Bootstrap</span>
+                        <span>75%</span>
                     </div>
                     <div class="line javascript" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="340"></div>
                 </div>
                 <div class="bar">
                     <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">
-                        <span>Python</span>
-                        <span>85%</span>
+                        <span>Java</span>
+                        <span>70%</span>
                     </div>
                     <div class="line python" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="440"></div>
                 </div>
                 <div class="bar">
                     <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="500">
-                        <span>PHP</span>
+                        <span>Jdbc</span>
                         <span>65%</span>
                     </div>
                     <div class="line php" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="540"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-
-    <section class="services" id="services">
-        <div class="title">
-            <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">My Services</h2>
-            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <div class="content">
-            <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
-                <div class="service-icon">
-                    <i class="fas fa-palette"></i>
-                </div>
-                <div class="info">
-                    <h3>Web Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                </div>
-            </div>
-            <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                <div class="service-icon">
-                    <i class="fas fa-object-group"></i>
-                </div>
-                <div class="info">
-                    <h3>Motion Graphic Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                </div>
-            </div>
-            <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
-                <div class="service-icon">
-                    <i class="fas fa-file-code"></i>
-                </div>
-                <div class="info">
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                 </div>
             </div>
         </div>
@@ -160,27 +121,27 @@
         <div class="content">
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="Image/work1.jpg" alt="">
+                    <img src="Image/calculator.png" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="Image/work2.jpg" alt="">
+                    <img src="Image/todo.png" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="Image/work3.jpg" alt="">
+                    <img src="Image/jdbc.png" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work4.jpg" alt="">
+                    <img src="Image/Skills.png" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work5.jpg" alt="">
+                    <img src="Image/about.png" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
@@ -202,7 +163,7 @@
               </div>
               <div class="info">
                 <h3>Address</h3>
-                <span>Bercelona, Spain</span>
+                <span>AndhraPradesh,Ongole</span>
               </div>
             </div>
             <div class="card reveal">
@@ -211,7 +172,7 @@
               </div>
               <div class="info">
                 <h3>Phone</h3>
-                <span>+34566-839754</span>
+                <span>+91 6574839211</span>
               </div>
             </div>
             <div class="card reveal">
@@ -220,7 +181,7 @@
               </div>
               <div class="info">
                 <h3>Email Address</h3>
-                <span>contact@email.com</span>
+                <span>kandulamohana@gmail.com</span>
               </div>
             </div>
             <div class="card reveal">
@@ -229,7 +190,7 @@
               </div>
               <div class="info">
                 <h3>Website</h3>
-                <span>mywebsite.com</span>
+                <span>Mohana Kandula portfolio.com</span>
               </div>
             </div>
           </div>
@@ -254,8 +215,8 @@
       </section>
   
       <footer class="footer">
-        <span class="footer-title">Jacob Stevens</span>
-        <p>Copyright @2021 <a href="#">Coding Zakir</a>. All Rights Reserved.</p>
+        <span class="footer-title">Mohana_Kandula</span>
+        <p>Copyright @2021 <a href="#">Coding Mohana</a>. All Rights Reserved.</p>
       </footer>
 
 
@@ -265,8 +226,9 @@
     </script>
     <script>
 
-        window.addEventListener("scroll", function(){
-    scrollBtn.classList.toggle("active", window.scrollY > 500);
+        window.addEventListener("scroll", function()
+        {
+        scrollBtn.classList.toggle("active", window.scrollY > 500);
 });
 
 //javascript for scroll back to top on click scroll-to-top button
@@ -278,7 +240,7 @@
 
         const menuBtn = document.querySelector(".menu-btn");
         const navigation = document.querySelector(".navigation");
-        const navigationItems = document.querySelector(".navigation a");
+        const navigationItems = document.querySelectorAll(".navigation a");
 
         menuBtn.addEventListener("click", () => {
             menuBtn.classList.toggle("active");
